microblog.css
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

#timeline {
    position: relative;
	margin: 1em;
}

.post {
    position: relative;
    display: flex;
    justify-content: flex-start;
    font-family: 'Roboto', sans-serif;
    margin-bottom: 17px;
}

.post .post-user--avatar {
    width: 48px;
    height: 48px;
    border-radius: 24px;
    margin-right: 19px;
}

.post .post-user--posted {
    width: 100%;
}

.post .post-user--posted .post-user--posted_info {
    display: table;
    width: 100%;
}

.post .post-user--posted .post-user--posted_info user {
    display: table-cell;
    vertical-align: middle;
    height: 13px;
    font-size: 11px;
    text-align: left;
    color: #092828;
    padding-left: 3px;
}

.post .post-user--posted .post-user--posted_info user::before {
    content: attr(data-realname);
}

.post .post-user--posted .post-user--posted_info user::after {
    content: ' - \0040' attr(data-username);
}

.post .post-user--posted .post-user--posted_info i {
    font-family: 'Material Icons';
    width: 14px;
    height: 14px;
    font-size: 14px;
    text-align: center;
    color: #092828;
}

.post .post-user--posted .post-user--posted_info i[data-verified='false'] {
    display: none;
}

.post .post-user--posted .post-user--posted_info span {
    display: table-cell;
    vertical-align: middle;
    font-size: 11px;
    text-align: right;
    color: #092828;
}

.post .post-user--posted .post-user--posted_message {
    display: block;
    width: 100%;
    border-radius: 7px;
    background-color: #f6f6f6;
}

.post .post-user--posted .post-user--posted_message::before {
    content: '';
    width: 0;
    height: 0;
    border-top: 0px solid transparent;
    border-bottom: 10px solid transparent;
    border-right: 10px solid #f6f6f6;
    position: relative;
    display: block;
    left: -10px;
    top: 3px;
}

.post .post-user--posted .post-user--posted_message q {
    display: table-cell;
    width: 100%;
    vertical-align: top;
    font-size: 15px;
    line-height: 1.4;
    text-align: left;
    color: #092828;
    padding: 16px;
}

.post .post-user--posted .post-user--posted_message cite {
    display: none;
}

.post .post-user--posted .post-user--posted_message .post-user--posted_message-photos {
    display: block;
}

.post .post-user--posted .post-user--posted_message .post-user--posted_message-photos img {
    max-width: 100%;
}

.post .post-user--posted q::before, .post .post-user--posted q::after {
    content: '';
}

.post .post-user--posted .post-user--posted_message-replies {
    padding-top: 17px;
}

#new_post {
	padding: 7px;
}

